syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "SetProto";

package gaintain;

import "exercise.proto";

service SetService {
  rpc ListSets (SetsRequest) returns (Sets) {}
  rpc CreateSet (NewSet) returns (Set) {}
  rpc GetSet (SetRequest) returns (Set) {}
  rpc UpdateSet (Set) returns (Set) {}
  rpc DeleteSet (SetRequest) returns (Set) {}
}

message Set {
  string id = 1;
  string superset_id = 2;
  int32 reps = 3;
  int32 position = 4;
  Exercise exercise = 5;
}
message NewSet {
  string exercise_id = 1;
  string superset_id = 2;
  int32 reps = 3;
  int32 position = 4;
}
message Sets {
  repeated Set sets = 1;
}

message SetsRequest {
  string superset_id = 1;
}
message SetRequest {
  string id = 1;
}
