// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "UserProto";

package gaintain;

service UserService {
  rpc ListUsers (UsersRequest) returns (Users) {}
  rpc CreateUser (NewUser) returns (User) {}
  rpc GetUser (UserRequest) returns (User) {}
  rpc UpdateUser (ModifyUser) returns (User) {}
  rpc DeleteUser (UserRequest) returns (User) {}
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
}
message NewUser {
  string email = 1;
  string name = 2;
  string password = 3;
}
message ModifyUser {
  string id = 1;
  string email = 2;
  string name = 3;
  string password = 4;
}
message Users {
  repeated User users = 1;
}

message UsersRequest {}
message UserRequest {
  string id = 1;
}
